--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "passport": "^0.5.2",
+    "passport-github": "^1.1.0"
   }
 }
